Implement object mapping using ObjectMapper with getter methods for request/response transformation